force-app/main/default/objects/Doctor__c/fields/Compensation_Details__c.field-meta.xml
<CustomField>
    <fullName>Compensation_Details__c</fullName>
    <label>Compensation Details</label>
    <precision>10</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>