force-app/main/default/objects/Doctor__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Doctor_ID__c</columns>
    <columns>Department__c</columns>
    <columns>Experience__c</columns>
    <columns>Email_ID__c</columns>
    <columns>Contact_Number__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>